
@startuml

' --------------------
' | configuration
' --------------------
hide circle
skinparam linetype ortho
left to right direction
' skinparam nodesep 100
' skinparam ranksep 100

' --------------------
' | entities
' --------------------
package "User Repo" as user_repo {
    entity users {
        id: int <<PK>>
        --
        username: string
        display_name: string
        spotify_token: string
        spotify_email: string
        hashed_password: string
        is_admin: bool
    }
}

package "Session Repo" as session_repo {
    entity sessions {
        id: int <<PK>>
        --
        name: string
        created_by: int
        created_at: int
        max_submissions: int
        start_at: int
        submission_phase_duration: int
        submissions_closed_at: int
        vote_phase_duration: int
    }

    entity players {
        session_id: int <<FK>>
        player_id: int <<FK>>
        --
        playlist_id: string <<FK>>
        is_submissions_finalized: bool
    }
    note right
        TODO:
        Update is_submissions_finalized 
        to be a unix timestamp submissions_finalized_at
    end note

    entity candidates {
        id: int <<PK>>
        --
        nominator_id: int <<FK>>
        session_id: int <<FK>>
        track_id: string
    }

    entity votes {
        session_id: int <<FK>>
        voter_id: int <<FK>>
        candidate_id: int <<FK>>
        --
    }

    
}

package "Music Repo" as music_repo {
    entity artists {
        id: string <<PK>>
        --
        name: string
        url: string
    }

    entity albums {
        id: string <<PK>>
        --
        name: string
        url: string
    }

    entity playlists {
        id: string <<PK>>
        --
        name: string
        url: string
    }

    entity tracks {
        id: string <<PK>>
        --
        name: string
        artists: string
        album: string
        explicit: bool
        url: string
    }

}

' --------------------
' | relationships
' --------------------
players }|--|| sessions
players }o--|| users
players ||--o| playlists

candidates }o--|| players
candidates }o--|| sessions
candidates }o--|| tracks

votes }o--|| players
votes }o--|| candidates
votes }o--|| sessions

tracks }|--|{ artists
tracks }|--|| albums
tracks }o--o{ playlists


@enduml
